// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlotMap renders correctly with collision warning 1`] = `
.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<svg
  viewBox="-1,-1,101, 94"
>
  <g
    transform="translate(0 0)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 0)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 23)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 23)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 23)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 46)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
    <svg
      aria-hidden="true"
      className=" c0 collision_icon"
      fill="currentColor"
      height={20}
      version="1.1"
      viewBox="0 0 24 24"
      width={20}
      x={6.5}
      xmlns="http://www.w3.org/2000/svg"
      y={1.5}
    >
      <path
        d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37259 18.6274 0 12 0C5.37259 0 0 5.37259 0 12C0 18.6274 5.37259 24 12 24ZM12.859 4.90789C12.5931 4.63596 12.2668 4.5 11.8801 4.5C11.4933 4.5 11.164 4.63596 10.8921 4.90789C10.6262 5.17982 10.4933 5.50613 10.4933 5.88683C10.4933 6.27357 10.6292 6.6029 10.9011 6.87483C11.1731 7.14676 11.4994 7.28272 11.8801 7.28272C12.2668 7.28272 12.5931 7.14676 12.859 6.87483C13.1309 6.6029 13.2669 6.27357 13.2669 5.88683C13.2669 5.50613 13.1309 5.17982 12.859 4.90789ZM9.39648 16.9543V17.625C10.0612 17.6008 10.8286 17.5888 11.6988 17.5888C12.708 17.5888 13.6416 17.6008 14.4996 17.625V16.918C13.8712 16.8938 13.4754 16.8425 13.3122 16.7639C13.2397 16.7277 13.1914 16.6551 13.1672 16.5464C13.1189 16.353 13.0947 15.7306 13.0947 14.6791V11.5973C13.0947 10.7694 13.1309 9.88416 13.2035 8.94147L12.9859 8.82364C12.436 9.04722 11.9284 9.2134 11.4631 9.32217C10.9978 9.43094 10.309 9.53367 9.39648 9.63036V10.3192C10.0975 10.3253 10.5084 10.3676 10.6292 10.4461C10.6836 10.4824 10.7229 10.561 10.7471 10.6818C10.8014 10.9416 10.8286 12.0173 10.8286 13.9087C10.8286 15.2864 10.7984 16.1415 10.738 16.4739C10.7138 16.631 10.6534 16.7397 10.5567 16.8002C10.46 16.8546 10.0733 16.9059 9.39648 16.9543Z"
        fillRule="evenodd"
      />
    </svg>
  </g>
  <g
    transform="translate(33 46)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 46)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 69)"
  >
    <rect
      className="slot_rect slot_occupied"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 69)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 69)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
</svg>
`;

exports[`SlotMap renders correctly with error 1`] = `
<svg
  viewBox="-1,-1,101, 94"
>
  <g
    transform="translate(0 0)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 0)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 23)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 23)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 23)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 46)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 46)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 46)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 69)"
  >
    <rect
      className="slot_rect slot_occupied slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 69)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 69)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
</svg>
`;

exports[`SlotMap renders correctly with error and collision warning 1`] = `
.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<svg
  viewBox="-1,-1,101, 94"
>
  <g
    transform="translate(0 0)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 0)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 23)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 23)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 23)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 46)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
    <svg
      aria-hidden="true"
      className=" c0 collision_icon"
      fill="currentColor"
      height={20}
      version="1.1"
      viewBox="0 0 24 24"
      width={20}
      x={6.5}
      xmlns="http://www.w3.org/2000/svg"
      y={1.5}
    >
      <path
        d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37259 18.6274 0 12 0C5.37259 0 0 5.37259 0 12C0 18.6274 5.37259 24 12 24ZM12.859 4.90789C12.5931 4.63596 12.2668 4.5 11.8801 4.5C11.4933 4.5 11.164 4.63596 10.8921 4.90789C10.6262 5.17982 10.4933 5.50613 10.4933 5.88683C10.4933 6.27357 10.6292 6.6029 10.9011 6.87483C11.1731 7.14676 11.4994 7.28272 11.8801 7.28272C12.2668 7.28272 12.5931 7.14676 12.859 6.87483C13.1309 6.6029 13.2669 6.27357 13.2669 5.88683C13.2669 5.50613 13.1309 5.17982 12.859 4.90789ZM9.39648 16.9543V17.625C10.0612 17.6008 10.8286 17.5888 11.6988 17.5888C12.708 17.5888 13.6416 17.6008 14.4996 17.625V16.918C13.8712 16.8938 13.4754 16.8425 13.3122 16.7639C13.2397 16.7277 13.1914 16.6551 13.1672 16.5464C13.1189 16.353 13.0947 15.7306 13.0947 14.6791V11.5973C13.0947 10.7694 13.1309 9.88416 13.2035 8.94147L12.9859 8.82364C12.436 9.04722 11.9284 9.2134 11.4631 9.32217C10.9978 9.43094 10.309 9.53367 9.39648 9.63036V10.3192C10.0975 10.3253 10.5084 10.3676 10.6292 10.4461C10.6836 10.4824 10.7229 10.561 10.7471 10.6818C10.8014 10.9416 10.8286 12.0173 10.8286 13.9087C10.8286 15.2864 10.7984 16.1415 10.738 16.4739C10.7138 16.631 10.6534 16.7397 10.5567 16.8002C10.46 16.8546 10.0733 16.9059 9.39648 16.9543Z"
        fillRule="evenodd"
      />
    </svg>
  </g>
  <g
    transform="translate(33 46)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 46)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 69)"
  >
    <rect
      className="slot_rect slot_occupied slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 69)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 69)"
  >
    <rect
      className="slot_rect slot_error"
      height={23}
      width={33}
    />
  </g>
</svg>
`;

exports[`SlotMap renders correctly without collision warnings or errors 1`] = `
<svg
  viewBox="-1,-1,101, 94"
>
  <g
    transform="translate(0 0)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 0)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 23)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 23)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 23)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 46)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 46)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 46)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(0 69)"
  >
    <rect
      className="slot_rect slot_occupied"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(33 69)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
  <g
    transform="translate(66 69)"
  >
    <rect
      className="slot_rect"
      height={23}
      width={33}
    />
  </g>
</svg>
`;
